--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -59,7 +59,7 @@
 	"editor.acceptSuggestionOnEnter": "smart",
 	"workbench.editor.tabSizing": "shrink",
 	"workbench.editor.highlightModifiedTabs": true,
-	"editor.wordWrap": "bounded",
+	"editor.wordWrap": "on",
 	"editor.mouseWheelZoom": true,
 	"editor.dragAndDrop": false,
 
